# 3-python-package-pyunit

./: LICENSE  Pipfile  README.md  lazydev_example  pyproject.toml  requirements.txt  setup.py
.github/: ci.yml
lazydev/: lazydev.py
tests/: test_lazydev.py
